# gravify

./: .gitignore  Dockerfile  README.md  default-config.json  docker-compose.yml  pyproject.toml
src/: blueprint_build.py  blueprints_creation.py  grav_setup.py  main.py  page_extraction.py  pages_creation.py  res_distribution.py  template_page.py  template_twigs.py  twig_field_template.py  utils.py
