[tool.poetry]
package-mode = false
name = "gravify"
version = "0.1.0"
description = ""
authors = ["Jurgen Alla <jurgen.alla.cs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pexpect = "^4.9.0"
lxml = "^5.3.0"
PyYAML = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
